--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,3 +28,9 @@
 	display: none;
 	background-color: #fff;
 }
+
+.center_div{
+	float: right;;
+    margin: 10 auto;
+    width:100% /* value of your choice which suits your alignment */
+}
